Fixing mobile spacing

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -59,7 +59,7 @@ button {
   margin: auto;
 }
 .mine-win {
-  width: 378px;
+  width: 288px;
   z-index: 1;
   left: 0;
   right: 0;
@@ -99,8 +99,8 @@ button {
 
 /* Block.js */
 .Block {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   float: left;
   cursor: pointer;
 }
@@ -112,7 +112,7 @@ button {
 
 /* Board */
 .Board {
-  width: 378px;
+  width: 288px;
 }
 
 /* Projects.js */
